--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
         <script data-require="lodash.js@*" data-semver="3.10.0" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.js"></script>
         <script data-require="moment.js@*" data-semver="2.10.2" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
         <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.0.3.js"></script>
-        <link rel="stylesheet" href="main.css.css" />
+        <link rel="stylesheet" href="main.css" />
         <script src="script.js"></script>
         <title>Email-Interface</title>
     </head>
@@ -28,10 +28,10 @@
             <table class="table table-mail table-striped table-bordered">
                 <thead>
                     <tr>
-                        <td class="cell cell-favourite"></td>
-                        <td class="cell cell-sender"></td>
-                        <td class="cell cell-body"></td>
-                        <td class="cell cell-date"></td>
+                        <td class="cell cell-favourite">Избранное</td>
+                        <td class="cell cell-sender">Отправитель</td>
+                        <td class="cell cell-body">Письмо</td>
+                        <td class="cell cell-date">Дата</td>
                     </tr>
                 </thead>
                 <tbody>
