--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="message in messageList.messages">
+                    <tr ng-repeat="message in messageList.messages | orderBy: 'date' : true ">
                         <td class="cell cell-favourite">
                             <button>
                                 <i class="glyphicon glyphicon-star"></i>
@@ -51,7 +51,7 @@
                             <span class="text">{{message.body}}</span>
                         </td>
                         <td class="cell cell-date">
-                            <span>{{message.date}}</span>
+                            <span>{{message.date | date : 'dd.MM.yy'}}</span>
                         </td>
                     </tr>
                 </tbody>
