--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="message in messageList.messages | orderBy: 'date' : true ">
+                    <tr ng-repeat="message in messageList.messages | orderBy: 'date' : true " ng-class="['t-row', {warning: message.favourite}]">
                         <td class="cell cell-favourite">
                             <button ng-click="messageList.addToFavourite(message.id)" ng-class="['btn', 'btn-default', {'btn-warning': message.favourite}]">
                                 <i class="glyphicon glyphicon-star"></i>
